--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "husky": "^9.1.7"
   },
   "scripts": {
-    "prepare": "husky"
+   "start": "node server.js"
   },
   "dependencies": {
     "dotenv": "^17.2.2"
